Package-A/main/default/objects/Employee__c/fields/Annual_Balance_Leave__c.field-meta.xml
<CustomField>
    <fullName>Annual_Balance_Leave__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Balance Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>