Package-A/main/default/objects/Employee__c/fields/Balance_Leave__c.field-meta.xml
<CustomField>
    <fullName>Balance_Leave__c</fullName>
    <formula>IF(First_Day_Of_Month__c == Joining_Date__c, ((YEAR(TODAY()) - YEAR(Joining_Date__c) - 1) *12) + (12 - MONTH(Joining_Date__c) +1) + MONTH(TODAY())
, ((YEAR(TODAY()) - YEAR(Joining_Date__c) - 1) *12) + (12 - MONTH(Joining_Date__c) +1) + MONTH(TODAY())
- 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>