Package-A/main/default/objects/Employee__c/fields/First_Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Of_Month__c</fullName>
    <formula>DATE(
     YEAR(Joining_Date__c),
     MONTH(Joining_Date__c),
     1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Day Of Month</label>
    <type>Date</type>
</CustomField>