Package-A/main/default/objects/Employee__c/fields/Leave_Applied__c.field-meta.xml
<CustomField>
    <fullName>Leave_Applied__c</fullName>
    <label>Leave Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>